Fix type tag center align

--- a/front/style.scss
+++ b/front/style.scss
@@ -307,7 +307,7 @@ h3.title {
         z-index: -1;
 
         .type, .cp-value {
-          margin: 2px 0px;
+          margin: 2px auto;
         }
 
         .cp-value {
